--- a/index.html
+++ b/index.html
@@ -22,28 +22,21 @@
     <!-- Adicione um container Bootstrap -->
     <div class="container">
         <h1 class="mt-5">Sobre Mim</h1>
-        <p>
-            Sobre Mim
+        <p>Meu nome é Carlos Henrique Carniatto, tenho 31 anos e sou um indivíduo multifacetado: programador, fotógrafo e um curioso nato (minha mãe costumava pensar que eu me tornaria eletricista quando criança, já que eu vivia mexendo com eletricidade desde os meus 4 anos, rs).</p>
 
-Meu nome é Carlos Henrique Carniatto, tenho 31 anos e sou um indivíduo multifacetado: programador, fotógrafo e um curioso nato (minha mãe costumava pensar que eu me tornaria eletricista quando criança, já que eu vivia mexendo com eletricidade desde os meus 4 anos, rs).
+        <p>Sempre fui apaixonado por computadores e comecei a explorar a programação aos 10 anos, alimentado pela curiosidade de desvendar os segredos por trás das incríveis páginas da internet que navegava. Foi nesse período que me deparei com sites de ensino de HTML e CSS, e um pouco mais tarde, desenvolvi interesse pelo mundo da segurança cibernética, explorando brevemente técnicas como a injeção SQL.</p>
 
-Sempre fui apaixonado por computadores e comecei a explorar a programação aos 10 anos, alimentado pela curiosidade de desvendar os segredos por trás das incríveis páginas da internet que navegava. Foi nesse período que me deparei com sites de ensino de HTML e CSS, e um pouco mais tarde, desenvolvi interesse pelo mundo da segurança cibernética, explorando brevemente técnicas como a injeção SQL.
+        <p>Iniciei um curso técnico de Informática durante o ensino médio no Brasil, embora não tenha conseguido concluir devido a limitações financeiras da minha família. No entanto, continuei estudando por conta própria e, nesse processo, meu interesse se voltou para C# e a plataforma Microsoft. Mesmo sem fluência em inglês, me dediquei a aprender a língua para poder seguir os cursos. Meu primeiro emprego foi em uma empresa de tecnologia no Brasil, onde trabalhei com Software de Gerenciamento Empresarial, com foco nas tecnologias Oracle, como PLSQL.</p>
 
-Iniciei um curso técnico de Informática durante o ensino médio no Brasil, embora não tenha conseguido concluir devido a limitações financeiras da minha família. No entanto, continuei estudando por conta própria e, nesse processo, meu interesse se voltou para C# e a plataforma Microsoft. Mesmo sem fluência em inglês, me dediquei a aprender a língua para poder seguir os cursos. Meu primeiro emprego foi em uma empresa de tecnologia no Brasil, onde trabalhei com Software de Gerenciamento Empresarial, com foco nas tecnologias Oracle, como PLSQL.
+        <p>Mais tarde, mudei para uma empresa de transporte, onde aprimorei minhas habilidades em C#. Em busca de desafios maiores, aceitei uma posição em um banco, onde fui responsável pelo desenvolvimento e infraestrutura da instituição. Após minha saída, fundei minha própria empresa de Consultoria em Tecnologia da Informação, com ênfase em migração de bancos de dados e desenvolvimento de projetos. Nesse período, tive a oportunidade de trabalhar com diversas tecnologias de mercado, incluindo PHP, C# e NoSQL. Também tive a experiência de morar na Alemanha e aprender um pouco de alemão.</p>
 
-Mais tarde, mudei para uma empresa de transporte, onde aprimorei minhas habilidades em C#. Em busca de desafios maiores, aceitei uma posição em um banco, onde fui responsável pelo desenvolvimento e infraestrutura da instituição. Após minha saída, fundei minha própria empresa de Consultoria em Tecnologia da Informação, com ênfase em migração de bancos de dados e desenvolvimento de projetos. Nesse período, tive a oportunidade de trabalhar com diversas tecnologias de mercado, incluindo PHP, C# e NoSQL. Também tive a experiência de morar na Alemanha e aprender um pouco de alemão.
+        <p>Dizem que não passo fome em cinco idiomas diferentes: inglês, português, alemão, italiano e espanhol. Sou um grande entusiasta do mundo de Harry Potter, então, cuidado com o que diz sobre os filmes em relação aos livros, rs. Além disso, sou um ávido apreciador de jogos eletrônicos e de todos os desafios relacionados a eles.</p>
 
-Dizem que não passo fome em cinco idiomas diferentes: inglês, português, alemão, italiano e espanhol. Sou um grande entusiasta do mundo de Harry Potter, então, cuidado com o que diz sobre os filmes em relação aos livros, rs. Além disso, sou um ávido apreciador de jogos eletrônicos e de todos os desafios relacionados a eles.
+        <p>Minhas maiores qualidades são minha força de vontade, determinação e habilidade em resolver problemas. No entanto, quando estou trabalhando, costumo dizer que me assemelho aos sete anões da Branca de Neve, especialmente ao Zangado, quando tenho que esperar por algo, o que realmente me irrita.</p>
 
-Minhas maiores qualidades são minha força de vontade, determinação e habilidade em resolver problemas. No entanto, quando estou trabalhando, costumo dizer que me assemelho aos sete anões da Branca de Neve, especialmente ao Zangado, quando tenho que esperar por algo, o que realmente me irrita.
+        <p>Tenho uma dificuldade em expressar meus pensamentos, pois às vezes eles ficam confusos e acabo perdendo o foco ao me expressar.</p>
 
-Tenho uma dificuldade em expressar meus pensamentos, pois às vezes eles ficam confusos e acabo perdendo o foco ao me expressar.
-
-E para os amantes de games que chegaram até esta parte do texto, tenho um segredo especial que só pode ser acessado por aqueles que verdadeiramente apreciam desafios e têm paixão por videogames! 😄🎮
-        </p>
-
-        <!-- Elemento oculto que será exibido após o Konami Code -->
-        <div id="segredo">Este é o segredo! 🎮</div>
+        <p>E para os amantes de games que chegaram até esta parte do texto, tenho um segredo especial que só pode ser acessado por aqueles que verdadeiramente apreciam desafios e têm paixão por videogames! 😄🎮</p>
     </div>
 
     <!-- Adicione os scripts do Bootstrap CDN -->
