--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             font-size: 24px;
             color: #FF0000; /* Cor do texto do segredo */
         }
+        p {
+            text-align: justify;
+            line-height: 1.6; /* Espaçamento entre linhas aumentado para legibilidade */
+            margin: 0 auto; /* Centraliza os parágrafos */
+            max-width: 800px; /* Define a largura máxima para evitar linhas muito longas */
+        }
     </style>
 </head>
 <body>
