--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <p>E para os amantes de games que chegaram até esta parte do texto, tenho um segredo especial que só pode ser acessado por aqueles que verdadeiramente apreciam desafios e têm paixão por videogames! 😄🎮</p>
     </div>
-
+    <div id="segredo">Eu sei fazer um churrasco muito bom e também sou muito bom em massas.</div>
     <!-- Adicione os scripts do Bootstrap CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
