add profile picutre

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Adicione um container Bootstrap -->
     <div class="container">
         <h1 class="mt-5">Acerca de mí</h1>
-        <img src="caminho_para_sua_foto.jpg" alt="Foto de Perfil" class="img-fluid rounded-circle" width="200">
+        <img src="profile.jpg" alt="Foto de Perfil" class="img-fluid rounded-circle" width="200">
         <p>Mi nombre es Carlos Henrique Carniatto, tengo 31 años y soy una persona versátil: programador, fotógrafo y un curioso innato (mi madre solía pensar que me convertiría en electricista cuando era niño, ya que siempre estaba jugando con la electricidad desde los 4 años, jeje).</p>
     
         <p>Siempre me apasionaron las computadoras y comencé a explorar la programación a los 10 años, impulsado por la curiosidad de descubrir los secretos detrás de las increíbles páginas web que navegaba. Fue durante este tiempo que me encontré con sitios web que enseñaban HTML y CSS, y un poco más tarde, desarrollé interés en el mundo de la ciberseguridad, explorando brevemente técnicas como la inyección SQL.</p>
